Update RFQ markdown and a few typos

--- a/solicitation_documents/001_RFQ.md
+++ b/solicitation_documents/001_RFQ.md
@@ -1,11 +1,17 @@
 # REQUEST FOR QUOTATION (RFQ)
+
 # Disaster Data Recovery Portal Pilot
 
-**From:** Jasmine Mitchell, Contracting Specialist, GSA FAS AAS NCR 
-**Subject:** Request for Quotation (RFQ) 
-**Project Title:** Disaster Data Recovery Portal Pilot 
+**From:** Jasmine Mitchell, Contracting Specialist, GSA FAS AAS NCR
+
+**Subject:** Request for Quotation (RFQ)
+
+**Project Title:** Disaster Data Recovery Portal Pilot
+
 **Date:** 
+
 **Reply By:** 
+
 **To:** Agile Blanket Purchase Agreement (aBPA) Pool 3 Holders 
 
 The U.S. General Services Administration (GSA), Federal Acquisition Service (FAS), Assisted Acquisition Service (AAS), National Capital Region (NCR) hereby issues this Request for Quotation (RFQ) on behalf of the GSA’s Technology Transformation Service (TTS) to provide user research and software development as outlined in the Performance Work Statement (PWS).
@@ -94,7 +100,7 @@ g. 	*Price Quotation*. The Government hereby seeks further price reductions and 
 
   ii. 	*Pricing Narrative*. The pricing narrative should describe your basis of pricing for the required services and other costs used in the development of the proposed pricing. The pricing narrative should also indicate if any additional discounts off of your aBPA are being offered. Include any basis of estimate or narrative in the Pricing Template provided to this RFQ.
 
-Note that Price Quotation will not be reviewed prior to Oral Interview.
+Note that Price Quotation will not be reviewed prior to Oral Presentation.
 
 ## 7. ORAL PRESENTATION
 The  four highest rated offerors chosen from Phase 2 to advance to Phase 3, Oral Presentation,  will be provided the questions, via email, approximately 60 minutes prior to their Oral Presentation. The Government is much more interested in the informational content of the offeror’s answers rather than the particular style or technique used in delivering the answers. The Government may take notes during the presentation at its discretion and exclusive right and property, and may use such notes in the evaluation. No copies will be provided to the offeror.
@@ -136,19 +142,19 @@ a. 	*Evaluation Process*. The Government intends to utilize a multi-phased appro
 
 **Phase 2 (Adjectival)**: Technical Compliance Check - Review of Written Technical Quotations to ensure that offerors meet technical requirements as outlined in the RFQ and the PWS. Only the four (4) highest rated offerors, with *Acceptable* rating or higher, will advance to Phase 3.
 
-**Phase 3 (Adjectival)**: Oral Interview - Offerors that are considered in Phase 3 will be notified of the time and date of the oral interview. The oral interview will be focused on the offeror’s experience and skills with open source software development, human-centered design, and continuous deployment methods.
+**Phase 3 (Adjectival)**: Oral Presentation - Offerors that are considered in Phase 3 will be notified of the time and date of the oral presentation. The oral presentation will be focused on the offeror’s experience and skills with open source software development, human-centered design, and continuous deployment methods.
 
 **Phase 4**: Pricing Schedule and Pricing Narrative Check - Review of Price Quotations.
 
 b. 	*Technical Evaluation Factors*. The Government will evaluate Phase 2 and Phase 3 for an offeror’s performance or capability acceptability based on the following non-price technical factors which are of equal importance to each other:
   
-  * 	**Technical Understanding and Approach**: The Government will evaluate the offeror’s technical approach: level of knowledge, technical expertise, and overall understanding of the requirement. The Government will also evaluate the offeror’s skills with open source software development, human-centered design, and continuous deployment methods.
+* **Technical Understanding and Approach**: The Government will evaluate the offeror’s technical approach: level of knowledge, technical expertise, and overall understanding of the requirement. The Government will also evaluate the offeror’s skills with open source software development, human-centered design, and continuous deployment methods.
 
-  * 	**Staffing Plan**: The Government will evaluate the offeror’s proposed staffing methodology and skill levels/labor categories as well as the availability and relevant work experience demonstrated by Key Personnel.
+* **Staffing Plan**: The Government will evaluate the offeror’s proposed staffing methodology and skill levels/labor categories as well as the availability and relevant work experience demonstrated by Key Personnel.
 
-  * 	**Similar Experience**: The Government will evaluate the offeror’s experience in performing projects of similar scope and complexity. The Government will also evaluate the offeror’s experience with open source software development, human-centered design, and continuous deployment methods.
+* **Similar Experience**: The Government will evaluate the offeror’s experience in performing projects of similar scope and complexity. The Government will also evaluate the offeror’s experience with open source software development, human-centered design, and continuous deployment methods.
 
-c. 	*Price Evaluation Factors*. Each offeror’s price quotation will be evaluated separately from the technical quotation and oral interview. The Government will evaluate the offeror’s pricing schedule as well as pricing narrative after the Oral Interview to ensure that the offered price is fair, reasonable, and realistic. Pricing shall reflect reasonableness, consistency with industry standards, and be in compliance with rates and terms and conditions of the aBPA. Note that as submissions become more technically equal in their merit, the evaluated price becomes more important. Therefore, provide your best discounted rates.
+c. 	*Price Evaluation Factors*. Each offeror’s price quotation will be evaluated separately from the technical quotation and oral presentation. The Government will evaluate the offeror’s pricing schedule as well as pricing narrative after the Oral Presentation to ensure that the offered price is fair, reasonable, and realistic. Pricing shall reflect reasonableness, consistency with industry standards, and be in compliance with rates and terms and conditions of the aBPA. Note that as submissions become more technically equal in their merit, the evaluated price becomes more important. Therefore, provide your best discounted rates.
 
 d. 	*Scoring Plan*
 
