Fixed the numbering at the end of section 6

--- a/solicitation_documents/001_RFQ.md
+++ b/solicitation_documents/001_RFQ.md
@@ -96,9 +96,9 @@ At a minimum, provide:
 
 g. 	*Price Quotation*. The Government hereby seeks further price reductions and Most Favored Customer (MFC) pricing for all price services. Provide your best discounted rates. Pricing quotation shall be a separate attachment and it is not included as part of the 5-page limitation. The offeror shall submit a separate price quotation that includes the following, as one file:
 
-  i. 	*Pricing Schedule*. Include a pricing schedule utilizing the attached Pricing Template. All proposed labor rates shall be consistent with or lower than your aBPA rates and must be fully burdened (inclusive of profit, fringe benefits, salary, indirect rates, and the GSA Contract Access Fee (CAF)).
+h. 	*Pricing Schedule*. Include a pricing schedule utilizing the attached Pricing Template. All proposed labor rates shall be consistent with or lower than your aBPA rates and must be fully burdened (inclusive of profit, fringe benefits, salary, indirect rates, and the GSA Contract Access Fee (CAF)).
 
-  ii. 	*Pricing Narrative*. The pricing narrative should describe your basis of pricing for the required services and other costs used in the development of the proposed pricing. The pricing narrative should also indicate if any additional discounts off of your aBPA are being offered. Include any basis of estimate or narrative in the Pricing Template provided to this RFQ.
+i. 	*Pricing Narrative*. The pricing narrative should describe your basis of pricing for the required services and other costs used in the development of the proposed pricing. The pricing narrative should also indicate if any additional discounts off of your aBPA are being offered. Include any basis of estimate or narrative in the Pricing Template provided to this RFQ.
 
 Note that Price Quotation will not be reviewed prior to Oral Presentation.
 
