Removed an extraneous "of the"

--- a/solicitation_documents/003_PWS.md
+++ b/solicitation_documents/003_PWS.md
@@ -73,7 +73,7 @@ Additional requirement:
 
 The contractor will **not** be responsible to perform the following:
 
-* Hosting of the of the system.
+* Hosting of the system.
 
 * Manage the granting of an authority to operate.
 
