Fixed link to QASP

--- a/solicitation_documents/003_PWS.md
+++ b/solicitation_documents/003_PWS.md
@@ -239,7 +239,7 @@ Any contractor performance to correct defects found by the Government as a resul
 The contractor shall consult with the TTS Product Lead to determine what is appropriate, effective, and essential for system documentation. The Government requires, at a minimum, that the contractor will generate comprehensive and complete documentation, both within the code itself, within the source code version control system (e.g., through proper use of descriptive commit messages, issue tracking, pull requests, etc.), and as appropriate, in separate documentation, provide artifacts, and create new user stories based on each sprint.
 
 #### 6.6.7 Quality Assurance
-The Government will use [the attached draft Quality Assurance Surveillance Plan](https://docs.google.com/document/d/1nPnl3lHgPoWEMiccvJIJwxdZ16RP2-svkmOxK-vYPKA/) (QASP) to monitor the contractor’s performance. The QASP will provide oversight help to ensure that service levels reach and maintain the required levels for performance of this task. Further, the QASP provides the Government with a proactive way to avoid unacceptable or deficient performance, and provides verifiable input for the required Past Performance Information Assessments. The QASP is a living document and may be updated by the Government as necessary. Any updates to the QASP will be provided to the contractor. If needed, the draft QASP will be updated within 10 business days of contract kick off meeting by TTS Product Lead and/or the COR/ACOR.
+The Government will use [the attached draft Quality Assurance Surveillance Plan](https://github.com/18F/bpa-disaster-data-portal-pilot/blob/master/solicitation_documents/004_QASP.md) (QASP) to monitor the contractor’s performance. The QASP will provide oversight help to ensure that service levels reach and maintain the required levels for performance of this task. Further, the QASP provides the Government with a proactive way to avoid unacceptable or deficient performance, and provides verifiable input for the required Past Performance Information Assessments. The QASP is a living document and may be updated by the Government as necessary. Any updates to the QASP will be provided to the contractor. If needed, the draft QASP will be updated within 10 business days of contract kick off meeting by TTS Product Lead and/or the COR/ACOR.
 
 ### 6.7 Transition
 #### 6.7.1 Transition Plan
